# dynamic_poisson_sampling

./: Cargo.toml  README.md
examples/: noise_2d_plot.rs  noise_3d_plot.rs
src/: lib.rs  main.rs
