[package]
name = "dynamic_poisson_sampling"
version = "0.1.0"
edition = "2021"

[lib]
name = "dynamic_poisson_sampling"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = { version = "0.23.0", features = ["display-window"] }
noise = { version = "0.8.2", features = ["images"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"