[package]
name = "dynamic_poisson_sampling"
version = "1.0.0"
edition = "2021"
description = "A poisson disk sampling with dynamic distance."
license = "MIT"
repository = "https://github.com/Nathan-M-code/dynamic_poisson_sampling"
readme = "README.md"
category = [ "algorithms" ]
keywords = [ "distribution", "poisson-disk", "multidimensional", "sampling" ]

[dependencies]
rand = "0.8.5"


[dev-dependencies]
image = "0.24.7"
imageproc = { version = "0.23.0", features = ["display-window"] }
noise = { version = "0.8.2", features = ["images"] }
plotters = "0.3.5"